--- a/packages/server-watcher/package.json
+++ b/packages/server-watcher/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "update-watcher",
+  "name": "@update-watcher/server-watcher",
   "version": "0.1.0",
   "type": "module",
-  "packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js"
