dev: add prettier + remove scripts from frontend updates

--- a/packages/frontend-updates-runner/package.json
+++ b/packages/frontend-updates-runner/package.json
@@ -2,10 +2,7 @@
   "name": "@update-watcher/frontend-updates-runner",
   "version": "0.1.0",
   "type": "module",
-  "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js"
-  },
+  "scripts": {},
   "devDependencies": {
     "@types/node": "^22.13.1"
   },
