--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "@update-watcher/monorepo",
+  "name": "@simple-frontend-dev/update-watcher-monorepo",
   "version": "0.1.0",
+  "description": "Monorepo to get notified of frontend dependencies updates",
+  "author": "simple-frontend-dev",
+  "license": "MIT",
   "packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a",
   "devDependencies": {
     "prettier": "^3.5.2",
