--- a/.github/workflows/frontend-updates-runner.yml
+++ b/.github/workflows/frontend-updates-runner.yml
@@ -12,21 +12,32 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          path: frontend-updates-runner
+
       - name: Install pnpm
         uses: pnpm/action-setup@v4
+
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
           cache: "pnpm"
-      - name: Install dependencies
-        run: pnpm install
+
       - name: Get last commit message
         id: commit
         run: echo "commit_message=$(git log -1 --pretty=%B)" >> $GITHUB_ENV
+
+      - name: Install dependencies
+        run: |
+          cd frontend-updates-runner
+          pnpm install
+
       - name: Run frontend updates runner
         if: contains(env.commit_message, 'trigger-frontend-updates')
         env:
           ENV_GITHUB_APP_ID: ${{ secrets.ENV_GITHUB_APP_ID }}
           ENV_GITHUB_PRIVATE_KEY: ${{ secrets.ENV_GITHUB_PRIVATE_KEY }}
           ENV_COMMIT_MESSAGE: ${{ env.commit_message }}
-        run: npx tsx packages/frontend-updates-runner/src/update-depency-in-repos.ts
+        run: |
+          cd frontend-updates-runner
+          npx tsx src/update-depency-in-repos.ts
