trigger-frontend-updates:@playwright/test@1.52.0

--- a/.github/workflows/frontend-updates-runner.yml
+++ b/.github/workflows/frontend-updates-runner.yml
@@ -25,6 +25,7 @@ jobs:
         with:
           node-version: lts/*
           cache: "pnpm"
+          cache-dependency-path: frontend-updates-runner/pnpm-lock.yaml
 
       - name: Get last commit message
         id: commit
